Fixed scrollbar showing on Settings on Chromium.

--- a/css/msl.css
+++ b/css/msl.css
@@ -3528,21 +3528,23 @@ div.formgroup.horizontal > .right {
 	height: 425px;
 	display: flex;
 	flex-direction: row;
-	align-items: space-between;
+	justify-content: space-between;
 }
 
 #settingsMenuBody {
+	width: 100%;
+	height: 100%;
 	overflow-y: scroll;
 	scrollbar-width: none;
+}
+
+#settingsMenuBody::-webkit-scrollbar {
+	display: none;
 }
 
 #settingsMenuScroll {	
 	height: 425px;
 	margin: 0;
-}
-
-#settingsMenuBody {
-	width: 100%;
 }
 
 #SettingsMenu ul {
